# src/main/java/it/pagopa/pn/notificationcostservice/model/paymentinfo/NotificationCostRequest.java
@@ -1,0 +1,15 @@
+package it.pagopa.pn.notificationcostservice.model.paymentinfo;
+
+import lombok.Builder;
+import lombok.Data;
+import lombok.ToString;
+
+import java.util.List;
+
+@Data
+@ToString
+@Builder
+public class NotificationCostRequest {
+    private List<RecipientCostData> recipients;
+}
+
