# src/main/java/it/pagopa/pn/notificationcostservice/model/paymentinfo/PaymentData.java
@@ -1,0 +1,12 @@
+package it.pagopa.pn.notificationcostservice.model.paymentinfo;
+
+import lombok.*;
+
+@Data
+@Builder
+@ToString
+public class PaymentData {
+    @NonNull
+    private String iuv;
+}
+
