# src/main/java/it/pagopa/pn/notificationcostservice/model/paymentinfo/PaymentInfo.java
@@ -1,0 +1,17 @@
+package it.pagopa.pn.notificationcostservice.model.paymentinfo;
+
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.ToString;
+
+@Data
+@EqualsAndHashCode
+@ToString
+@Builder
+public class PaymentInfo {
+    private String iuv;
+    private String iun;
+    private Integer recIndex;
+    private Boolean applyCost;
+}
